--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -15,9 +25,12 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/routers": "^5.7.2",
     "@reduxjs/toolkit": "^1.5.0",
+    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/react-native": "^7.2.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "jest-expo": "^40.0.2",
     "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -28,6 +41,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
   },
